--- a/css/style.css
+++ b/css/style.css
@@ -2,21 +2,24 @@
 * {
   padding: 0;
   margin: 0;
-  border: 0; }
+  border: 0;
+}
 
 *, *:before, *:after {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 :focus, :active {
-  outline: none; }
+  outline: none;
+}
 
 a:focus, a:active {
-  outline: none; }
+  outline: none;
+}
 
 nav, footer, header, aside {
-  display: block; }
+  display: block;
+}
 
 html, body {
   height: 100%;
@@ -26,36 +29,46 @@ html, body {
   font-size: 14px;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%; }
+  -webkit-text-size-adjust: 100%;
+}
 
 input, button, textarea {
-  font-family: inherit; }
+  font-family: inherit;
+}
 
 input::-ms-clear {
-  display: none; }
+  display: none;
+}
 
 button {
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 button::-moz-focus-inner {
   padding: 0;
-  border: 0; }
+  border: 0;
+}
 
 a, a:visited {
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 a:hover {
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 ul li {
-  list-style: none; }
+  list-style: none;
+}
 
 img {
-  vertical-align: top; }
+  vertical-align: top;
+}
 
 h1, h2, h3, h4, h5, h6 {
   font-size: inherit;
-  font-weight: 400; }
+  font-weight: 400;
+}
 
 @font-face {
   font-family: "CenturyGothic-Bold";
@@ -64,110 +77,256 @@ h1, h2, h3, h4, h5, h6 {
   src: url("../fonts/GOTHICB3.eot?#iefix") format("embedded-opentype"), url("../fonts/GOTHICB3.otf") format("opentype"), url("../fonts/GOTHICB3.svg") format("svg"), url("../fonts/GOTHICB3.ttf") format("truetype"), url("../fonts/GOTHICB3.woff") format("woff");
   /* Modern Browsers */
   font-weight: 700;
-  font-style: normal; }
-
+  font-style: normal;
+}
 body {
-  font-family: "CenturyGothic-Bold"; }
+  font-family: "CenturyGothic-Bold";
+}
 
 .wrapper {
   max-width: 1600px;
-  margin: 0px auto; }
+  margin: 0px auto;
+}
 
 .headercontent {
-  margin: 0px auto; }
+  margin: 0px auto;
+}
+
+.header_burger {
+  display: none;
+}
 
 @media (max-width: 1600px) {
   .wrapper {
-    max-width: 1600px; } }
-
+    max-width: 1600px;
+  }
+}
 @media (max-width: 992px) {
   .wrapper {
-    max-width: 750px; } }
-
+    max-width: 750px;
+  }
+}
 @media (max-width: 767px) {
   .wrapper {
-    max-width: none; } }
-
+    max-width: none;
+  }
+}
 .header-top {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
   font-family: "CenturyGothic-Bold";
   color: #000000;
-  font-size: 25px; }
+  font-size: 25px;
+  height: 85px;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 50;
+}
+
+.header-top:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: #fff;
+}
+
+.father_burger {
+  display: flex;
+  justify-content: space-between;
+  width: 1650px;
+  padding: 0px 0px 0px 30px;
+}
+
+@media (max-width: 767px) {
+  body.lock {
+    overflow: hidden;
+  }
+
+  .header_burger {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 20px;
+    z-index: 51;
+  }
+
+  .header-top {
+    height: 40px;
+  }
+
+  .header_burger:before,
+.header_burger:after {
+    content: "";
+    background-color: #000000;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    left: 0;
+  }
+
+  .header_burger:before {
+    content: "";
+    top: 0;
+  }
+
+  .header_burger:after {
+    content: "";
+    bottom: 0;
+  }
+
+  .header_burger span {
+    content: "";
+    background-color: #000000;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    top: 9px;
+  }
+
+  .father_burger {
+    position: fixed;
+    overflow: auto;
+    top: -100%;
+    left: 0;
+    width: 100%;
+    height: 700px;
+    background-color: #fff;
+    z-index: 1;
+    transition: all 0.5s ease-out 0s;
+  }
+
+  .father_burger.active {
+    top: 0;
+  }
+
+  .header-top:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: #E9967A;
+    z-index: 2;
+  }
+
+  .header-top,
+.header-top a {
+    display: block;
+  }
+
+  .header-top a {
+    display: none;
+  }
+
+  .father_burger.active a {
+    display: block;
+  }
+
+  .father_burger {
+    display: block;
+  }
+
+  .header_burger {
+    margin: 12px 0px 0px 10px;
+  }
+
+  .header-top a:nth-child(1) {
+    margin: 50px 0px 0px -2px;
+  }
+}
+.header_burger.active:before {
+  transform: rotate(45deg);
+  top: 9px;
+}
+
+.header_burger.active:after {
+  transform: rotate(-45deg);
+  bottom: 9px;
+}
+
+.header_burger.active span {
+  transform: scale(0);
+}
+
+.header-top a {
+  position: relative;
+  padding: 10px 5px 0px 5px;
+  top: 0;
+  left: 0;
+  transition: all 0.5s ease 0s;
+}
 
 .header-top_item1 {
   color: #000000;
   margin: 30px 0px 0px 60px;
-  -webkit-transition: all 0.5s ease-out 0s;
-  -o-transition: all 0.5s ease-out 0s;
-  transition: all 0.5s ease-out 0s; }
+  transition: all 0.5s ease-out 0s;
+}
 
 .header-top_item1:hover {
   font-size: 25.5px;
   color: #DC143C;
-  -webkit-box-shadow: 0 5px 10px 4px #000;
   box-shadow: 0 5px 10px 4px #000;
-  border-radius: 5px; }
+  border-radius: 5px;
+}
 
 .header-top_item2 {
   color: #000000;
   margin: 30px 0px 0px 0px;
-  -webkit-transition: all 0.5s ease-out 0s;
-  -o-transition: all 0.5s ease-out 0s;
-  transition: all 0.5s ease-out 0s; }
+  transition: all 0.5s ease-out 0s;
+}
 
 .header-top_item2:hover {
   font-size: 25.5px;
   color: #DC143C;
-  -webkit-box-shadow: 0 5px 10px 4px #000;
   box-shadow: 0 5px 10px 4px #000;
-  border-radius: 5px; }
+  border-radius: 5px;
+}
 
 .header-top_item3 {
   color: #000000;
   margin: 30px 0px 0px 0px;
-  -webkit-transition: all 0.5s ease-out 0s;
-  -o-transition: all 0.5s ease-out 0s;
-  transition: all 0.5s ease-out 0s; }
+  transition: all 0.5s ease-out 0s;
+}
 
 .header-top_item3:hover {
   font-size: 25.5px;
   color: #DC143C;
-  -webkit-box-shadow: 0 5px 10px 4px #000;
   box-shadow: 0 5px 10px 4px #000;
-  border-radius: 5px; }
+  border-radius: 5px;
+}
 
 .header-top_item4 {
   color: #000000;
-  margin: 30px 0px 0px 0px;
-  -webkit-transition: all 0.5s ease-out 0s;
-  -o-transition: all 0.5s ease-out 0s;
-  transition: all 0.5s ease-out 0s; }
+  margin: 28px 0px 0px 0px;
+  transition: all 0.5s ease-out 0s;
+}
 
 .header-top_item4:hover {
   font-size: 25.5px;
   color: #DC143C;
-  -webkit-box-shadow: 0 5px 10px 4px #000;
   box-shadow: 0 5px 10px 4px #000;
-  border-radius: 5px; }
+  border-radius: 5px;
+}
 
 .header-top_item5 {
   color: #000000;
   margin: 30px 40px 0px 0px;
-  -webkit-transition: all 0.5s ease-out 0s;
-  -o-transition: all 0.5s ease-out 0s;
-  transition: all 0.5s ease-out 0s; }
+  transition: all 0.5s ease-out 0s;
+}
 
 .header-top_item5:hover {
   font-size: 25.5px;
   color: #DC143C;
-  -webkit-box-shadow: 0 5px 10px 4px #000;
   box-shadow: 0 5px 10px 4px #000;
-  border-radius: 5px; }
+  border-radius: 5px;
+}
 
 .line {
   width: 95.3%;
@@ -177,280 +336,267 @@ body {
   background: #000000;
   border: 0;
   /* рамка вокруг разделительной линии (уберем ее) */
-  margin: 45px 0px 45px 45px; }
+  margin: 100px 0px 45px 45px;
+}
 
 .headerbottom {
-  margin: 0px 0px 40px 0px; }
+  margin: 0px 0px 40px 0px;
+}
 
 .headerbottom__content {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  height: 120px; }
+  height: 120px;
+}
 
 .leftlogo {
-  -ms-flex-preferred-size: 20%;
   flex-basis: 20%;
   color: #000000;
   font-family: "CenturyGothic-Bold";
   font-size: 50px;
   padding: 2px 0px 0px 70px;
-  -webkit-transition: all 0.5s ease-out 0s;
-  -o-transition: all 0.5s ease-out 0s;
-  transition: all 0.5s ease-out 0s; }
+  transition: all 0.5s ease-out 0s;
+}
 
 .leftlogo:hover {
   color: #DC143C;
-  font-size: 60px; }
+  font-size: 60px;
+}
 
 .titlecenter {
-  -ms-flex-preferred-size: 60%;
   flex-basis: 60%;
   color: #000000;
   font-family: "CenturyGothic-Bold";
   font-size: 18px;
   text-align: center;
-  -webkit-transition: all 0.3s ease-out 0s;
-  -o-transition: all 0.3s ease-out 0s;
-  transition: all 0.3s ease-out 0s; }
+  transition: all 0.3s ease-out 0s;
+}
 
 .titlecenter:hover {
   color: #DC143C;
-  font-size: 19px; }
+  font-size: 19px;
+}
 
 .imgavtor img {
   width: 100%;
   border-radius: 1%;
-  -webkit-transition: all 0.5s ease-out 0s;
-  -o-transition: all 0.5s ease-out 0s;
-  transition: all 0.5s ease-out 0s; }
+  transition: all 0.5s ease-out 0s;
+}
 
 .imgavtor img:hover {
-  -webkit-box-shadow: 0 5px 10px 4px #000;
-  box-shadow: 0 5px 10px 4px #000; }
+  box-shadow: 0 5px 10px 4px #000;
+}
 
 .about {
   background-color: #e9d3d1;
   margin: 50px 0px 0px 0px;
-  -webkit-transition: all 0.5s ease-out 0s;
-  -o-transition: all 0.5s ease-out 0s;
-  transition: all 0.5s ease-out 0s; }
+  transition: all 0.5s ease-out 0s;
+}
 
 .aboutme {
-  text-align: center; }
+  text-align: center;
+}
 
 .about:hover {
-  -webkit-box-shadow: 0 5px 10px 4px #000;
-  box-shadow: 0 5px 10px 4px #000; }
+  box-shadow: 0 5px 10px 4px #000;
+}
 
 .aboutme__title {
   color: #000000;
   font-size: 50px;
   padding: 15px 0px 30px 0px;
-  -webkit-transition: all 0.5s ease-out 0s;
-  -o-transition: all 0.5s ease-out 0s;
-  transition: all 0.5s ease-out 0s; }
+  transition: all 0.5s ease-out 0s;
+}
 
 .aboutme__title:hover {
   color: #DC143C;
-  font-size: 52px; }
+  font-size: 52px;
+}
 
 .aboutme__text {
   color: #000000;
   font-size: 25px;
-  -webkit-transition: all 0.2s ease-out 0s;
-  -o-transition: all 0.2s ease-out 0s;
-  transition: all 0.2s ease-out 0s; }
+  transition: all 0.2s ease-out 0s;
+}
 
 .aboutme__text:hover {
   color: #DC143C;
-  font-size: 25.5px; }
+  font-size: 25.5px;
+}
 
 .aboutservice {
   color: #000000;
   text-align: center;
-  font-family: "CenturyGothic-Bold"; }
+  font-family: "CenturyGothic-Bold";
+}
 
 .aboutservice__title {
   color: #000000;
   font-size: 50px;
   padding: 20px 0px 15px 0px;
-  -webkit-transition: all 0.5s ease-out 0s;
-  -o-transition: all 0.5s ease-out 0s;
-  transition: all 0.5s ease-out 0s; }
+  transition: all 0.5s ease-out 0s;
+}
 
 .aboutservice__title:hover {
   color: #DC143C;
-  font-size: 52px; }
+  font-size: 52px;
+}
 
 .aboutservice__text {
   font-size: 25px;
   color: #000000;
   font-family: "CenturyGothic-Bold";
   padding: 10px 0px 20px 0px;
-  -webkit-transition: all 0.2s ease-out 0s;
-  -o-transition: all 0.2s ease-out 0s;
-  transition: all 0.2s ease-out 0s; }
+  transition: all 0.2s ease-out 0s;
+}
 
 .aboutservice__text:hover {
   color: #DC143C;
-  font-size: 25.5px; }
+  font-size: 25.5px;
+}
 
 .skills {
-  -webkit-transition: all 0.2s ease-out 0s;
-  -o-transition: all 0.2s ease-out 0s;
-  transition: all 0.2s ease-out 0s; }
+  transition: all 0.2s ease-out 0s;
+}
 
 .skills__title {
   font-size: 50px;
   text-align: center;
   padding: 25px 0px 65px 0px;
-  -webkit-transition: all 0.5s ease-out 0s;
-  -o-transition: all 0.5s ease-out 0s;
-  transition: all 0.5s ease-out 0s; }
+  transition: all 0.5s ease-out 0s;
+}
 
 .skills__title:hover {
   color: #DC143C;
-  font-size: 52px; }
+  font-size: 52px;
+}
 
 .skills__subtitle {
   font-size: 25px;
   text-align: center;
   padding: 0px 0px 70px 0px;
-  -webkit-transition: all 0.5s ease-out 0s;
-  -o-transition: all 0.5s ease-out 0s;
-  transition: all 0.5s ease-out 0s; }
+  transition: all 0.5s ease-out 0s;
+}
 
 .skills__subtitle:hover {
   color: #DC143C;
-  font-size: 25.5px; }
+  font-size: 25.5px;
+}
 
 .programs {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  text-align: center; }
+  text-align: center;
+}
 
 .programs__item {
-  -webkit-box-flex: 0;
-  -ms-flex: 0 1 25%;
-  flex: 0 1 25%; }
+  flex: 0 1 25%;
+}
 
 .programs__item_img img {
-  -webkit-transition: all 0.5s ease-out 0s;
-  -o-transition: all 0.5s ease-out 0s;
-  transition: all 0.5s ease-out 0s; }
+  transition: all 0.5s ease-out 0s;
+}
 
 .programs__item_img img:hover {
-  -webkit-box-shadow: 0 5px 10px 4px #000;
   box-shadow: 0 5px 10px 4px #000;
-  border-radius: 15px; }
+  border-radius: 50%;
+}
 
 .programs__item_title {
   font-size: 18px;
   padding: 10px 0px 0px 0px;
-  -webkit-transition: all 0.5s ease-out 0s;
-  -o-transition: all 0.5s ease-out 0s;
-  transition: all 0.5s ease-out 0s; }
+  transition: all 0.5s ease-out 0s;
+}
 
 .programs__item_title:hover {
   color: #DC143C;
-  font-size: 20px; }
+  font-size: 20px;
+}
 
 .Portfolio {
   background-color: #e9d3d1;
   font-size: 50px;
   text-align: center;
   margin: 160px 0px 0px 0px;
-  -webkit-transition: all 0.5s ease-out 0s;
-  -o-transition: all 0.5s ease-out 0s;
-  transition: all 0.5s ease-out 0s; }
+  transition: all 0.5s ease-out 0s;
+  perspective: 400px;
+}
 
 .Portfolio:hover {
-  -webkit-box-shadow: 0 5px 10px 4px #000;
-  box-shadow: 0 5px 10px 4px #000; }
+  box-shadow: 0 5px 10px 4px #000;
+}
 
 .Portfolio__title {
   padding: 80px 0px 70px 0px;
-  -webkit-transition: all 0.5s ease-out 0s;
-  -o-transition: all 0.5s ease-out 0s;
-  transition: all 0.5s ease-out 0s; }
+  transition: all 0.5s ease-out 0s;
+}
 
 .Portfolio__title:hover {
-  color: #DC143C; }
+  color: #DC143C;
+}
 
 .picture {
-  display: inline-block; }
+  display: inline-block;
+}
 
 .picture__item:last-child {
-  padding: 120px 0px 65px 0px; }
-
+  padding: 120px 0px 65px 0px;
+}
 .picture__item:first-child {
-  padding: 0px 0px 115px 0px; }
+  padding: 0px 0px 115px 0px;
+}
 
 .picture__item img {
   width: 100%;
-  -webkit-transition: all 0.5s ease-out 0s;
-  -o-transition: all 0.5s ease-out 0s;
-  transition: all 0.5s ease-out 0s; }
+  transition: all 0.5s ease-out 0s;
+}
 
 .picture__item img:hover {
-  -webkit-box-shadow: 0 5px 10px 4px #000;
-  box-shadow: 0 5px 10px 4px #000; }
+  box-shadow: 0 5px 10px 4px #000;
+}
 
 .footer {
-  height: 730px; }
+  height: 730px;
+}
 
 .uppart__content {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
-  text-align: center; }
+  text-align: center;
+}
 
 .uppart__content_title {
   font-size: 50px;
   margin: 70px 0px 50px 0px;
-  -webkit-transition: all 0.5s ease-out 0s;
-  -o-transition: all 0.5s ease-out 0s;
-  transition: all 0.5s ease-out 0s; }
+  transition: all 0.5s ease-out 0s;
+}
 
 .uppart__content_title:hover {
   color: #DC143C;
-  font-size: 52px; }
+  font-size: 52px;
+}
 
 .uppart__content_invite {
   font-size: 25px;
-  -webkit-transition: all 0.5s ease-out 0s;
-  -o-transition: all 0.5s ease-out 0s;
-  transition: all 0.5s ease-out 0s; }
+  transition: all 0.5s ease-out 0s;
+}
 
 .uppart__content_invite:hover {
   color: #DC143C;
-  font-size: 25.5px; }
+  font-size: 25.5px;
+}
 
 .socnetworks__content {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  height: 250px; }
+  height: 250px;
+}
 
 .socnetworks__content_item {
   margin: 45px;
-  -webkit-transition: all 0.5s ease-out 0s;
-  -o-transition: all 0.5s ease-out 0s;
-  transition: all 0.5s ease-out 0s; }
+  transition: all 0.5s ease-out 0s;
+}
 
 .socnetworks__content_item:hover {
-  -webkit-box-shadow: 0 5px 10px 4px #000;
   box-shadow: 0 5px 10px 4px #000;
-  border-radius: 15px; }
+  border-radius: 15px;
+}
