--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -109,6 +109,7 @@ body.lock{
 	width: 30px;
 	height: 20px;
    z-index: 51;
+
 }
 
 .header-top{
@@ -147,14 +148,15 @@ bottom: 0;
 
 .father_burger{
 	position: fixed;
-	 overflow: auto;
+	
 	top:-100%;
 	left:0;
-	width: 100%;
-   height: 700px;
-   background-color: #fff;
+	width: 210px;
+   height: 350px;
+   background-color: #D3D3D3;
    z-index: 1;
    transition: all 0.5s ease-out 0s;
+   overflow: auto;
 }
 
 
@@ -208,28 +210,7 @@ margin: 50px 0px 0px -2px;
 }
 
 
-
-
-
-
-
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 .header_burger.active:before{
 	transform:rotate(45deg);
@@ -246,8 +227,6 @@ margin: 50px 0px 0px -2px;
 }
 
 
-
-
 .header {}
 .header-top a{
 
@@ -257,10 +236,6 @@ margin: 50px 0px 0px -2px;
   left: 0;
   transition: all 0.5s ease 0s;
 }
-
-
-
-
 
 .header-top_item1 {
 color: #000000;
@@ -363,13 +338,8 @@ font-size: 60px;
 .titlecenter:hover{
 color: #DC143C;
 font-size: 19px;
-	
+	text-align: center;
 }
-.Sweet {
-
-}
-
-
 
 .imgavtor img {
 width: 100%;
@@ -404,18 +374,15 @@ color:#DC143C;
 font-size: 52px;
 }
 
-
 .aboutme__text {
 color: #000000;
 font-size: 25px;
 transition: all 0.2s ease-out 0s;
 }
-
 .aboutme__text:hover{
 color:#DC143C;
 font-size: 25.5px;
 }
-
 .aboutservice {
 color: #000000;
 text-align: center;
@@ -507,7 +474,7 @@ font-size: 20px;
 	text-align: center;
 	margin: 160px 0px 0px 0px;
 	transition: all 0.5s ease-out 0s;
-	perspective:400px;
+	
 }
 .Portfolio:hover{
 	box-shadow: 0 5px 10px 4px #000;
@@ -584,4 +551,76 @@ height: 250px;
 .socnetworks__content_item:hover{
 box-shadow: 0 5px 10px 4px #000;
 border-radius: 15px;
+}
+
+
+@media (max-width: 530px){
+.programs,
+.programs__item{
+display:block;
+text-align: center;
+}
+
+.socnetworks__content{
+display:block;
+text-align: right;
+
+}
+.titlecenter{
+	display: none;
+}
+.line{
+	width: 150px;
+}
+
+
+
+h1{
+	font-size: calc(24px + 16 * (100vw/1600));
+}
+h2{
+	font-size: calc(16px + 16 * (100vw/1600));
+}
+
+}
+
+@media (max-width: 150px){
+.programs,
+.programs__item{
+display:block;
+text-align: center;
+}
+
+.socnetworks__content{
+display:block;
+text-align: center;
+
+}
+
+
+.titlecenter{
+	display: none;
+}
+.line{
+	width: 60px;
+}
+
+
+
+h1{
+	font-size: calc(12px + 16 * (100vw/1600));
+}
+h2{
+	font-size: calc(8px + 16 * (100vw/1600));
+}
+
+
+
+}
+
+@media (max-height: 360px){
+.father_burger a{
+	font-size: 20px;
+}
+
 }
