--- a/css/style.css
+++ b/css/style.css
@@ -191,14 +191,14 @@ body {
 
   .father_burger {
     position: fixed;
-    overflow: auto;
     top: -100%;
     left: 0;
-    width: 100%;
-    height: 700px;
-    background-color: #fff;
+    width: 210px;
+    height: 350px;
+    background-color: #D3D3D3;
     z-index: 1;
     transition: all 0.5s ease-out 0s;
+    overflow: auto;
   }
 
   .father_burger.active {
@@ -374,6 +374,7 @@ body {
 .titlecenter:hover {
   color: #DC143C;
   font-size: 19px;
+  text-align: center;
 }
 
 .imgavtor img {
@@ -517,7 +518,6 @@ body {
   text-align: center;
   margin: 160px 0px 0px 0px;
   transition: all 0.5s ease-out 0s;
-  perspective: 400px;
 }
 
 .Portfolio:hover {
@@ -599,4 +599,66 @@ body {
 .socnetworks__content_item:hover {
   box-shadow: 0 5px 10px 4px #000;
   border-radius: 15px;
+}
+
+@media (max-width: 530px) {
+  .programs,
+.programs__item {
+    display: block;
+    text-align: center;
+  }
+
+  .socnetworks__content {
+    display: block;
+    text-align: right;
+  }
+
+  .titlecenter {
+    display: none;
+  }
+
+  .line {
+    width: 150px;
+  }
+
+  h1 {
+    font-size: calc(24px + 16 * (100vw/1600));
+  }
+
+  h2 {
+    font-size: calc(16px + 16 * (100vw/1600));
+  }
+}
+@media (max-width: 150px) {
+  .programs,
+.programs__item {
+    display: block;
+    text-align: center;
+  }
+
+  .socnetworks__content {
+    display: block;
+    text-align: center;
+  }
+
+  .titlecenter {
+    display: none;
+  }
+
+  .line {
+    width: 60px;
+  }
+
+  h1 {
+    font-size: calc(12px + 16 * (100vw/1600));
+  }
+
+  h2 {
+    font-size: calc(8px + 16 * (100vw/1600));
+  }
+}
+@media (max-height: 360px) {
+  .father_burger a {
+    font-size: 20px;
+  }
 }
