--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -563,7 +563,7 @@ text-align: center;
 
 .socnetworks__content{
 display:block;
-text-align: right;
+text-align: center;
 
 }
 .titlecenter{
@@ -596,7 +596,9 @@ display:block;
 text-align: center;
 
 }
-
+.uppart__content_invite  h2{
+	margin: 0px 0px 1000px 0px;
+}
 
 .titlecenter{
 	display: none;
